This may first changes.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <!-- News Updates Start-->        
         <div class="news-updates float-left">
 	       <h2>News &amp; Updates</h2>
-           Hi dear this is my changes
+           Hi dear this is my changes adsfsafdsa
            <h4 class="cufontext">01.01.2011</h4>
            <h3><a href="news.html" class="cufontext1">This is the blog post title extending to this point and even extending beyond!</a></h3>
            <p>This is the blog post title. And this is a truncated description. And this is a truncated description and this is a truncated description and this is .... <a href="news.html" title="Read more">continue reading </a></p>
